feat: add code standards